[project]
name = "oneheart"
version = "0.1.0"
description = "ONEHEART — scaffolded project to help fellow human beings"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "sithsnonchai-maker" } ]
license = { file = "LICENSE" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
