[project]
name = "oneheart"
version = "0.1.0"
description = "ONEHEART — scaffolded project to help fellow human beings"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "sithsnonchai-maker" } ]
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=23.9",
  "isort>=5.12",
  "flake8>=6.0",
  "pre-commit>=3.4",
  "pytest>=7.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
